k8s/app.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lumio-web-app
  labels:
    app: lumio-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumio-web-app
  template:
    metadata:
      labels:
        app: lumio-web-app
    spec:
      containers:
      - name: application
        image: ghcr.io/martinubl/lumio-web:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-data
          mountPath: /var/www/www/uploads
          subPath: uploads
        - name: app-data
          mountPath: /var/www/log
          subPath: log
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: app-data
